[workspace]
members = [
    "rs/canister",
    "rs/canister/core",
    "rs/canister/types",
    "rs/constants",
    "rs/lambda",
    "rs/lambda/canister_client",
    "rs/lambda/core",
    "rs/lambda/eth_rpc_client",
    "rs/lambda/parameter_store_client",
    "rs/types"
]
resolver = "3"

[workspace.dependencies]
aws-config = "1"
aws-sdk-ssm = "1"
aws-types = "1"
candid = "0.10"
futures = "0.3.31"
ic-agent = "0.44.0"
ic-cdk = "0.18"
ic_principal = "0.1.1"
lambda_runtime = "0.14"
onesec_forwarding_address = { git = "https://github.com/sisyphe-dev/onesec-forwarding-address", rev = "10a4b5a263ea1d4d4b38bffdb45c4e274c7b7221", package = "forwarding-address" }
reqwest = "0.12.23"
serde = "1"
serde_json = "1.0.143"
tokio = "1"
tracing = "0.1"
url = "2.5.7"
