[workspace]
members = [
    "rs/canister",
    "rs/canister/core",
    "rs/canister/types",
    "rs/constants",
    "rs/lambda",
    "rs/lambda/canister_client",
    "rs/lambda/core",
    "rs/lambda/dynamodb",
    "rs/lambda/eth_rpc_client",
    "rs/lambda/parameter_store_client",
    "rs/types"
]
resolver = "3"

[workspace.dependencies]
aws-config = "1"
aws-sdk-dynamodb = "1.92.0"
aws-sdk-ssm = "1"
aws-types = "1"
candid = "0.10"
futures = "0.3"
ic-agent = "0.44"
ic-cdk = "0.18"
ic-http-types = "0.1.0"
ic-metrics-encoder = "1.1.1"
ic_principal = "0.1"
ic-stable-structures = "0.7"
itertools = "0.14.0"
lambda_runtime = "0.14"
onesec_forwarding_address = { git = "https://github.com/sisyphe-dev/onesec-forwarding-address", rev = "1529b1efb2fe3e5ca0e13af3f3bf9e41532ae4a4", package = "forwarding-address" }
openssl = "0.10"
reqwest = "0.12"
serde = "1"
serde_json = "1"
tokio = "1"
tracing = "0.1"
url = "2"
