[package]
name = "onesec_forwarder_canister"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-http-types.workspace = true
ic-metrics-encoder.workspace = true
ic-stable-structures.workspace = true
onesec_forwarder_canister_core.path = "./core"
onesec_forwarder_canister_types.path = "./types"
